move to java 17, simplify code, fix warnings